lab6/net-policy-denyAll.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: demo-apps
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
